Fix vertical squashing on short screens; Allow scroll

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -24,7 +24,9 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100vh;
+  align-items: center;
+  min-height: calc(100vh - 4rem);
+  margin: 2rem 0;
 }
 
 h1 {
@@ -110,7 +112,6 @@ div.ctas {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 5rem;
 }
 
 div.ctas div.platforms {
